# hclsm

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: hclsm_base.yaml  hclsm_large.yaml  hclsm_small.yaml  hclsm_tiny.yaml
configs/ablations/: no_aux_decoder.yaml  no_causality.yaml  no_event_detection.yaml  no_hierarchy.yaml  no_memory.yaml  no_objects.yaml  no_ssm.yaml
docs/: architecture.md  benchmarks.md  implementation.md  math.md  production_config.yaml
hclsm/: __init__.py  config.py  model.py
hclsm/causality/: __init__.py  action_conditioner.py  causal_graph.py  intervention.py  value_function.py
hclsm/dynamics/: __init__.py  event_detector.py  hierarchy_manager.py  level0_ssm.py  level1_event.py  level2_goal.py  temporal_unet.py
hclsm/inference/: __init__.py  online_learner.py  planner.py  world_simulator.py
hclsm/kernels/: __init__.py  gnn_message_pass.py  hierarchical_state.py  slot_attention_kernel.py  sparse_event_attn.py  ssm_scan_kernel.py
hclsm/memory/: __init__.py  consolidation.py  episodic.py  replay_buffer.py  semantic.py
hclsm/objects/: __init__.py  dynamic_slots.py  losses.py  object_state.py  (+3 more)
scripts/: benchmark_kernels.py  eval_full.py  evaluate.py  setup_data.sh  train.py  train_production.py  train_real.py  visualize_slots.py
tests/: test_causality.py  test_data_distributed.py  test_dynamics.py  test_end_to_end.py  test_gradient_checkpointing.py  test_kernels.py  test_memory.py  test_objects.py  test_perception.py  test_sprint4_causality.py  test_sprint5_planning.py  test_sprint6_continual.py  test_training.py
(+14 files in other folders)
